{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 107,
  "lineage": "766f34da-3429-09a9-5208-692cbb0a96a0",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:vpc/vpc-03857079d2a72a2db",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01827c07018a2b139",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0497cab12d457f90a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03857079d2a72a2db",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0be11391901d6b20b",
            "owner_id": "419197236432",
            "region": "eu-central-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "managed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02468b0515605b421",
            "arn": "arn:aws:ec2:eu-central-1:419197236432:instance/i-0d82f2d5ca43612fc",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ansible-lab-dev-ec2-ssm-profile",
            "id": "i-0d82f2d5ca43612fc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-lab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-062d7ed71599f05cf"
              }
            ],
            "primary_network_interface_id": "eni-062d7ed71599f05cf",
            "private_dns": "ip-172-31-6-34.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.6.34",
            "public_dns": "ec2-63-182-212-161.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.182.212.161",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Project": "ansible-lab"
                },
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Project": "ansible-lab"
                },
                "throughput": 125,
                "volume_id": "vol-025b316c82c82e566",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "ansible-lab-dev-managed-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00fcddf6ed68d5c63",
            "tags": {
              "Name": "ansible-lab-node-1",
              "Role": "managed"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ansible-lab-node-1",
              "Project": "ansible-lab",
              "Role": "managed"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04f51f49360bd90d9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "i-0d82f2d5ca43612fc",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_ssm_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_key_pair.this",
            "aws_security_group.managed",
            "aws_security_group.master",
            "data.aws_iam_policy_document.ec2_assume_role",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02468b0515605b421",
            "arn": "arn:aws:ec2:eu-central-1:419197236432:instance/i-0bfeff8b189a97a1f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ansible-lab-dev-ec2-ssm-profile",
            "id": "i-0bfeff8b189a97a1f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-lab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07b854bc0cd4f3f2a"
              }
            ],
            "primary_network_interface_id": "eni-07b854bc0cd4f3f2a",
            "private_dns": "ip-172-31-15-254.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.15.254",
            "public_dns": "ec2-63-180-5-252.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.180.5.252",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Project": "ansible-lab"
                },
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Project": "ansible-lab"
                },
                "throughput": 125,
                "volume_id": "vol-0f005b780a37d3fe8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "ansible-lab-dev-managed-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00fcddf6ed68d5c63",
            "tags": {
              "Name": "ansible-lab-node-2",
              "Role": "managed"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ansible-lab-node-2",
              "Project": "ansible-lab",
              "Role": "managed"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04f51f49360bd90d9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "i-0bfeff8b189a97a1f",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_ssm_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_key_pair.this",
            "aws_security_group.managed",
            "aws_security_group.master",
            "data.aws_iam_policy_document.ec2_assume_role",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02468b0515605b421",
            "arn": "arn:aws:ec2:eu-central-1:419197236432:instance/i-0f9e7a88088ea87cf",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ansible-lab-dev-ec2-ssm-profile",
            "id": "i-0f9e7a88088ea87cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-lab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-035ed7e3732ac06ac"
              }
            ],
            "primary_network_interface_id": "eni-035ed7e3732ac06ac",
            "private_dns": "ip-172-31-12-133.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.12.133",
            "public_dns": "ec2-18-192-204-145.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.192.204.145",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Project": "ansible-lab"
                },
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Project": "ansible-lab"
                },
                "throughput": 125,
                "volume_id": "vol-0785e591b05a981f1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "ansible-lab-dev-managed-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00fcddf6ed68d5c63",
            "tags": {
              "Name": "ansible-lab-node-3",
              "Role": "managed"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ansible-lab-node-3",
              "Project": "ansible-lab",
              "Role": "managed"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04f51f49360bd90d9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "i-0f9e7a88088ea87cf",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_ssm_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_key_pair.this",
            "aws_security_group.managed",
            "aws_security_group.master",
            "data.aws_iam_policy_document.ec2_assume_role",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02468b0515605b421",
            "arn": "arn:aws:ec2:eu-central-1:419197236432:instance/i-0024819637d7a131b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ansible-lab-dev-ec2-ssm-profile",
            "id": "i-0024819637d7a131b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-lab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-026d9892df6d430ef"
              }
            ],
            "primary_network_interface_id": "eni-026d9892df6d430ef",
            "private_dns": "ip-172-31-14-206.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.14.206",
            "public_dns": "ec2-63-177-73-236.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.177.73.236",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Project": "ansible-lab"
                },
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Project": "ansible-lab"
                },
                "throughput": 125,
                "volume_id": "vol-07b08370d48fef6fa",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "ansible-lab-dev-master-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00fcddf6ed68d5c63",
            "tags": {
              "Name": "ansible-lab-master",
              "Role": "master"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ansible-lab-master",
              "Project": "ansible-lab",
              "Role": "master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02d36a9fd2e9db13b"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "i-0024819637d7a131b",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_ssm_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_key_pair.this",
            "aws_security_group.master",
            "data.aws_iam_policy_document.ec2_assume_role",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "managed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:security-group/sg-04f51f49360bd90d9",
            "description": "Security group for managed instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f51f49360bd90d9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH from master security group",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02d36a9fd2e9db13b"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ansible-lab-dev-managed-sg",
            "name_prefix": "",
            "owner_id": "419197236432",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ansible-lab-dev-managed-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ansible-lab-dev-managed-sg",
              "Project": "ansible-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-03857079d2a72a2db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "sg-04f51f49360bd90d9",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.master",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:security-group/sg-02d36a9fd2e9db13b",
            "description": "Security group for master instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d36a9fd2e9db13b",
            "ingress": [
              {
                "cidr_blocks": [
                  "46.205.211.185/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ansible-lab-dev-master-sg",
            "name_prefix": "",
            "owner_id": "419197236432",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ansible-lab-dev-master-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ansible-lab-dev-master-sg",
              "Project": "ansible-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-03857079d2a72a2db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "sg-02d36a9fd2e9db13b",
            "region": "eu-central-1"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}